# weightlifting-app

./: .coveragerc  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  deploy.yml  test.yml  tests.yml
alembic/: env.py
app/: config.py  constants.py  main.py
app/api/: dependencies.py
app/api/dependencies/: auth.py  db.py
app/api/routes/: users.py
app/api/schemas/: user.py
app/api/shemas/: user.py
app/config/: __init__.py
app/config/settings/: __init__.py  app.py  email.py  postgres.py
app/data/: crud.py  security.py  session.py  sql_app.db
app/data/migrations/: env.py
app/data/migrations/versions/: 001_initial.py  002_added_field_is_test_in_users.py  003_remove_field_is_test_in_users.py.py
app/data/models/: __init__.py  base_fields.py  user.py
app/data/repositories/: interfaces.py  user.py
app/exceptions/: exc_400.py  exc_401.py  exc_403.py  exc_404.py
app/gateways/: __init__.py  rabbitmq_email.py  redis_email.py
app/schemas/: auth.py  email.py  user.py
app/services/: __init__.py
app/services/auth/: __init__.py  get_authentication_tokens.py  get_authentication_tokens_service.py
app/services/auth/tools/: __init__.py  token.py
app/services/gateways/: email.py
app/services/interfaces/: email_gateways.py  users.py
app/services/users/: __init__.py  confirm_email.py  create_user.py  delete_user.py  get_current_and_active_user.py  get_token.py  get_user.py  get_user_by_email.py  get_user_by_id.py  get_users.py  login_service.py  update_user.py
app/tools/: logging_config.py  mailer.py  security.py  sentry.py
app/worker/: receive.py  send.py  subscriber.py
certs/: create_ssl.txt
infrastructure/: Dockerfile-app  Dockerfile-redis-consumer  alembic.ini
redis-data/: dump.rdb
tests/: conftest.py
tests/fixtures/: clients.py  user_data.py
tests/test_api/: test_creare_user.py  test_get_user.py  test_get_users.py  test_login_user.py  test_update_user.py  test_user_delete.py  test_users.py
tests/test_services/: test_get_authentication_tokens_service.py  test_get_users_service.py
