[tool.poetry]
name = "weightlifting-app"
version = "0.1.0"
description = "Sport application"
authors = ["maratumerow <maratumerow@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
sqlalchemy = "^2.0.29"
uvicorn = "^0.29.0"
python-multipart = "^0.0.9"
pydantic = {extras = ["email"], version = "^2.7.0"}
pydantic-settings = "^2.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
isort = "^5.13.2"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
