[tool.poetry]
name = "weightlifting-app"
version = "0.1.0"
description = "Sport application"
authors = ["maratumerow <maratumerow@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
sqlalchemy = "^2.0.29"
uvicorn = "^0.29.0"
python-multipart = "^0.0.9"
pydantic = {extras = ["email"], version = "^2.7.0"}
pydantic-settings = "^2.2.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
psycopg2-binary = "^2.9.9"
alembic = "^1.13.2"
sentry-sdk = {extras = ["fastapi"], version = "^2.10.0"}
redis = "^5.0.8"
pika = "^1.3.2"
pika-stubs = "^0.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
isort = "^5.13.2"
mypy = "^1.9.0"
httpx = "^0.27.0"
faker = "^25.2.0"
types-passlib = "^1.7.7.20240327"
types-python-jose = "^3.3.4.20240106"
coverage = "^7.5.3"
coverage-badge = "^1.1.1"
pytest-cov = "^5.0.0"
setuptools = "^70.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
omit = [
    "*/tests/*"
]
